# uv-questions_api-users

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  compose.yaml  rest.http
src/: main.rs  test.rs
src/app/modules/: mod.rs  routing.rs
src/app/modules/auth/: controller.rs
src/app/modules/auth/services/: helpers.rs
src/app/modules/role/: model.rs
src/app/modules/user/: controller.rs  mod.rs  model.rs
src/app/modules/user/handlers/: create.rs  index.rs  mod.rs  patch.rs  show.rs  update.rs
src/app/modules/user/services/: claims.rs  mod.rs  respository.rs  user_in_claims.rs
src/app/providers/: constants.rs
src/app/providers/guards/: admin.rs  claims.rs  coord.rs  mod.rs  robot.rs  thera.rs  user.rs
src/app/providers/interfaces/: claims.rs  config_getter.rs  form.rs  mod.rs  token.rs  user.rs
src/config/: database.rs
src/database/: schema.rs
src/database/migrations/2023-02-22-084118_creation_roles/: down.sql  up.sql
src/database/migrations/2023-02-22-084735_creation_users/: down.sql  up.sql
